# rs-brite

./: Cargo.toml  Makefile  README.md  install.sh  rs-brite.toml
packaging/: rs-brite.service
packaging/scripts/: postinst  postinstall
src/: config.rs  daemon.rs  image_processor.rs  lib.rs  main.rs
