[package]
name = "rs-brite"
version = "0.1.0"
edition = "2024"
description = "rs-brite Auto Brightness Daemon"

[dependencies]
anyhow = "1.0.100"
brightness = { version = "0.8.0", features = ["blocking"] }
config = "0.15.19"
opencv = "0.97.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
x11rb = { version = "0.13.2", features = ["extra-traits", "cursor", "image", "resource_manager"] }
xkeysym = "0.2.1"

[package.metadata.deb]
maintainer = "David Blain"
copyright = "2025, David Blain"
license-file = ["LICENSE"]
depends = "$auto"
section = "utils"
priority = "optional"

assets = [
    ["target/release/rs-brite", "/usr/bin/rs-brite", "755"],
    ["packaging/rs-brite.service", "/usr/lib/systemd/user/rs-brite.service", "644"],
    ["rs-brite.toml", "/etc/rs-brite/config.toml", "644"]
]

maintainer-scripts = "packaging/scripts"

conf-files = [
    "/etc/rs-brite/config.toml"
]
